# rover_odom

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
launch/: bringup.launch.py  imu_to_odom.launch.py  offline_bringup_replay.launch.py
rover_odom/: cmd_yaw_logger.py  ekf_odom.py  imu_cmd_logger.py  imu_json_to_odom.py  imu_reader.py  logger_cmd_vel_yaw.py  logger_imu_cmd_vel.py  magnetometer_reader.py  rover_teleop.py
rviz/: rover_mapping.rviz
tools/: DATA_LOG.txt  fit_cmd_to_omega.py  imu_cmd_aligned_20251015_175052.csv  imu_cmd_aligned_20251015_193400.csv  imu_cmd_aligned_20251016_085603.csv  velocity_identification.py
tools/ekf_validation/: animate_ekf_odom.py  bag_to_csv_ekf_odom.py
tools/velocity_from_imu_identification/: imu_cmd_aligned_20251017_113120.csv  imu_cmd_aligned_20251017_123704.csv  imu_cmd_aligned_20251021_101044.csv  imu_cmd_aligned_20251021_134242.csv  velocity_identification.py
urdf/: rover.urdf.xacro
